Added message about updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
           <img src="http://maps.googleapis.com/maps/api/staticmap?center=William+Osler+House,+Osler+Road,+Headington,+Oxford&zoom=16&scale=1&size=480x320&maptype=roadmap&markers=color:blue%7CWilliam+Osler+House,+Osler+Road,+Headington,+Oxford&sensor=false" alt="Map" id="map">
         </a>
       </p>
-      
+      <h3>What next?</h3>
+      <p>
+        Full invitations will follow shortly, but as we get more information
+        we'll post it here, so check back for updates.
+      </p>
     </article>
     
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
